// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactThreeTestRenderer Core correctly builds a tree 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "props": {
                  "args": [],
                  "array": Float32Array [
                    -1,
                    -1,
                    1,
                    1,
                    -1,
                    1,
                    1,
                    1,
                    1,
                    1,
                    1,
                    1,
                    -1,
                    1,
                    1,
                    -1,
                    -1,
                    1,
                  ],
                  "count": 6,
                  "itemSize": 3,
                },
                "type": "bufferAttribute",
              },
            ],
            "props": {
              "args": [],
            },
            "type": "bufferGeometry",
          },
          {
            "children": [],
            "props": {
              "args": [],
              "color": "hotpink",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "args": [],
        },
        "type": "mesh",
      },
      {
        "children": [],
        "props": {
          "args": [
            0,
            0,
            255,
          ],
        },
        "type": "color",
      },
    ],
    "props": {
      "args": [],
      "position": [
        1,
        2,
        3,
      ],
    },
    "type": "group",
  },
]
`;

exports[`ReactThreeTestRenderer Core toTree() handles complicated tree of fragments 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "props": {
          "args": [
            0,
            0,
            0,
          ],
        },
        "type": "color",
      },
    ],
    "props": {
      "args": [],
    },
    "type": "group",
  },
  {
    "children": [
      {
        "children": [],
        "props": {
          "args": [
            0,
            0,
            255,
          ],
        },
        "type": "color",
      },
    ],
    "props": {
      "args": [],
    },
    "type": "group",
  },
  {
    "children": [
      {
        "children": [],
        "props": {
          "args": [
            255,
            0,
            0,
          ],
        },
        "type": "color",
      },
    ],
    "props": {
      "args": [],
    },
    "type": "group",
  },
]
`;

exports[`ReactThreeTestRenderer Core updates children 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                2,
                2,
              ],
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "args": [],
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "args": [],
          "position-z": 12,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                4,
                4,
              ],
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "args": [],
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "args": [],
          "position-y": 12,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                6,
                6,
              ],
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "args": [],
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "args": [],
          "position-x": 12,
        },
        "type": "mesh",
      },
    ],
    "props": {
      "args": [],
    },
    "type": "group",
  },
]
`;

exports[`ReactThreeTestRenderer Core updates children 2`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                6,
                6,
              ],
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "args": [],
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "args": [],
          "rotation-x": 1,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                4,
                4,
              ],
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "args": [],
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "args": [],
          "position-y": 12,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [],
            },
            "type": "meshBasicMaterial",
          },
          {
            "children": [],
            "props": {
              "args": [
                2,
                2,
              ],
            },
            "type": "boxGeometry",
          },
        ],
        "props": {
          "args": [],
          "position-x": 12,
        },
        "type": "mesh",
      },
    ],
    "props": {
      "args": [],
    },
    "type": "group",
  },
]
`;
